# PytestPlugin

./: README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml
src/pytest_result_sender/: __init__.py  conftest.py  plugin.py
tests/: test_001.py  test_ini.py
