[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = ["pytest>=8.3.5", "requests>=2.32.3", "charset-normalizer>=3.4.2"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

# ========= 代码格式化配置 =========
[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
force_sort_within_sections = true
known_first_party = ["pytest_result_sender"]
src_paths = ["src", "tests"]

# ========= 代码质量检查 =========
[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = ["E203", "W503", "E501", "F401"]
exclude = [".git", "__pycache__", "build", "dist", "venv", ".venv"]

# ========= PDM 构建配置 =========
[tool.pdm.build]
package-dir = "src"

# ========= 开发依赖组 =========
[tool.pdm.dev-dependencies]
lint = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=5.0.4",
    "flake8-bugbear>=24.1.11",
    "flake8-pyproject>=1.2.3"
]

# ========= 自定义脚本命令 =========
[tool.pdm.scripts]
black = "black src tests"
isort = "isort src tests"
format = {composite = ["black", "isort"]}
lint = "flake8 src tests"
check = {composite = ["format", "lint"]}
test = "pytest -v tests/"